# glassbox

./: Dockerfile  LICENSE  NOTES  README.md  pyproject.toml
.github/workflows/: test.yaml
src/glassbox/: client.py  config.py  models.py  py.typed  utils.py
src/glassbox/http/: __init__.py  http_client.py
src/glassbox/models/: clickstream_model.py  config_model.py  credentials_model.py  gbfullsession_model.py  httpstatuscode_model.py  logger_conf.py  logger_conf.yaml  sessiondetail_model.py  sessionsearch_model.py  test_gbfullsession_model.py
